Started convolution neural network and added some comments

--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -487,6 +487,63 @@
     "\n",
     "shape_classification_test()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c65be022",
+   "metadata": {},
+   "source": [
+    "Simple Convolution Neural Network for MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9514fff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvolutionalLayer:\n",
+    "    '''Creating a convolutional layer'''\n",
+    "    def __init__(self, filter_num, filter_size, input_channel=1, stride=1, padding=0):\n",
+    "        self.filter_num = filter_num\n",
+    "        self.filter_size = filter_size\n",
+    "        self.input_channel = input_channel\n",
+    "        self.stride = stride\n",
+    "        self.padding = padding\n",
+    "        #Initialization of filter with XAvier initialization\n",
+    "        self.filters = np.random.randn(filter_num, input_channel, filter_size, filter_size) * np.sqrt(2.0 / (filter_size * filter_size))\n",
+    "        self.biases = np.zeros(filter_num)\n",
+    "\n",
+    "    def fwd(self, input_data):\n",
+    "        '''Forward passing through Convolutional Layer'''\n",
+    "        self.input_data = input_data\n",
+    "\n",
+    "        #handle different input layers\n",
+    "        if len(input_data.shape) == 3:\n",
+    "            #when the input_data has batch_size, height, width only\n",
+    "            batch_size, input_height, input_width = input_data.shape\n",
+    "            input_data = input_data.reshape(batch_size, 1, input_height, input_width) #Adding a channel\n",
+    "            input_channel = 1\n",
+    "        else:\n",
+    "            #when input_data has channel as well\n",
+    "            batch_size, input_channel, input_height, input_width = input_data.shape\n",
+    "        \n",
+    "        #Calculating the output dimensions\n",
+    "        output_height = (input_height + 2 * self.padding - self.filter_size) // self.stride + 1\n",
+    "        output_width = (input_width + 2 * self.padding - self.filter_size) // self.stride + 1\n",
+    "        #Initialization of the output\n",
+    "        output = np.zeros((batch_size, self.filter_num, output_height, output_width))\n",
+    "\n",
+    "        if self.padding > 0: #if already padded\n",
+    "            pad_input = np.pad(input_data, ((0, 0), (0, 0), (self.padding, self.padding), (self.padding, self.padding)), mode='constant')\n",
+    "        else:\n",
+    "            pad_input = input_data\n",
+    "        \n",
+    "        #convolution\n",
+    "        for b in range(batch_size):\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
